Added more Gravatar functionality. More testing and styling done.

--- a/EPI-use Tech Assessment/EPI-use Tech Assessment.csproj
+++ b/EPI-use Tech Assessment/EPI-use Tech Assessment.csproj
@@ -272,6 +272,7 @@
     <Content Include="Views\Employees\viewEmployeePage.cshtml" />
     <Content Include="Views\Employees\deleteOtherEmployee.cshtml" />
     <Content Include="Views\Employees\updateOtherEmployee.cshtml" />
+    <Content Include="Views\Employees\viewEmployeeSortPage.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
